# forty-two-transcribe

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fortytwo_transcribe/: decorators.py  logger.py  manager.py  openai.py  settings.py  tg.py  types.py
